# Inferno

./: .clang-format  .gitignore  CMakeLists.txt  package.json
game/schema/: game.xsd
game/src/: game.cpp  game.h
game/src/scenes/: MainScene.cpp
inferno/src/: inferno.cpp  inferno.h
inferno/src/core/: Game.cpp  Game.h  GameConfig.cpp  Platform.cpp  Platform.h  Renderer.cpp  Renderer.h  Scene.cpp  Time.cpp  Time.h  file.cpp  file.h
inferno/src/drawing/: Color.cpp  Color.h
inferno/src/include/: inferno-drawing.h  inferno.h  math.h
inferno/src/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
inferno/src/math/: Vector2.cpp  Vector2.h
schema/: inferno.xsd
src/: inferno.cpp  inferno.h
src/components/: Transform.cpp  Transform.h
src/core/: Cleaner.cpp  Cleaner.h  Component.cpp  Component.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  Platform.cpp  Property.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Time.cpp  Time.h  Transform.cpp  Transform.h  file.cpp
src/drawing/: Color.cpp  Color.h  Graphics.cpp  Graphics.h  Interpolation.h  Rectangle.cpp  Rectangle.h  Texture.cpp  Texture.h  WritableTexture.cpp  WritableTexture.h
src/include/: inferno-components.h  inferno-core.h  inferno-drawing.h  inferno-input.h  inferno-math.h  inferno.h
src/input/: Cursor.h  Gamepad.cpp  Gamepad.h  GamepadAxis.h  GamepadButton.h  InputAxis.cpp  InputAxis.h  Key.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  MouseButton.h
src/math/: Random.cpp  Random.h  Vector2.cpp  Vector2.h  coordinates.cpp  coordinates.h  random.cpp  random.h
